haskell-logic-classes (1.5.2) unstable; urgency=low

  * Make the Show instances output more general expressions
  * Drop support for pretty < 1.1.2
  * Update the Skolem class documentation
  * start fixing Data.Logic.Instances.TPTP
  * Move TFormula test instance from Tests/Common.hs to Data.Logic.Instances.Test
  * Make the unit test code more understandable

 -- David Fox <dsf@seereason.com>  Wed, 02 Sep 2015 12:29:57 -0700

haskell-logic-classes (1.5.1) unstable; urgency=low

  * Update Homepage and Bug-Reports fields in cabal file

 -- David Fox <dsf@seereason.com>  Mon, 13 Apr 2015 14:16:10 -0700

haskell-logic-classes (1.5) unstable; urgency=low

  * Move the pApp* functions from Data.Logic.Classes.FirstOrder to
    Data.Logic.Classes.Apply, and let them work with any formula,
    not just first order.

 -- David Fox <dsf@seereason.com>  Sat, 29 Mar 2014 07:57:37 -0700

haskell-logic-classes (1.4.8) unstable; urgency=low

  * Make changelog visible in hackage.

 -- David Fox <dsf@seereason.com>  Tue, 15 Oct 2013 07:48:21 -0700

haskell-logic-classes (1.4.7) unstable; urgency=low

  * Copy the two modules from the incremental-sat-solver package
    (version 0.1.7) into logic-classes with a changed export list
    so our SatSolver instance can access the data types.

 -- David Fox <dsf@seereason.com>  Sun, 06 Jan 2013 17:44:04 -0800

haskell-logic-classes (1.4.6) unstable; urgency=low

  * Get rid of some deprecated datatype contexts.
  * Fix bug in hackage build.

 -- David Fox <dsf@seereason.com>  Wed, 20 Jun 2012 10:40:49 -0700

haskell-logic-classes (1.4.5) unstable; urgency=low

  * Build with stock applicative-extras package.

 -- David Fox <dsf@seereason.com>  Wed, 18 Apr 2012 07:41:30 -0700

haskell-logic-classes (1.4) unstable; urgency=low

  * Overhaul of the pretty printing, add Pretty class.
  * Fixes to get precedence behavior to match Harrison
  * Rename class Formula -> Atom (still need to add f parameter)